--- a/i18n/auth/es.json
+++ b/i18n/auth/es.json
@@ -5,6 +5,8 @@
     "ALREADY_HAVE_A_RESET_CODE": "¿Ya tienes un código de restablecimiento?",
     "ALREADY_HAVE_A_RESET_CODE_HINT": "Si ya tiene un código de reinicio, continúe y cambie su contraseña",
     "AUTHENTICATION_FAILED": "La autenticación ha fracasado",
+    "BACK_TO_INTRO": "Volver a la página principal",
+    "BACK_TO_INTRO_HINT": "Navigate back to the homepage",
     "BACK_TO_REGISTRATION": "Vuelve a la registración",
     "BACK_TO_SIGN_IN": "Vuelva al acceso",
     "BACK_TO_SIGN_IN_HINT": "Regrese a la página de inicio de sesión",
@@ -23,8 +25,8 @@
     "CREATE_AN_ACCOUNT_HINT": "Ir a la página de registro",
     "EMAIL": "Correo electrónico",
     "EMAIL_HINT": "La dirección de correo electrónico que usó para registrarse",
-    "EMAIL_OBLIGATORY": "La dirección del correo electrónico es obligatoria",
     "ERROR": "Error",
+    "GLOBAL_SIGN_OUT": "Salida global",
     "HAVEN_T_RECEIVED_A_RESET_CODE": "¿Aún no has recibido el código de restablecimiento?",
     "HAVEN_T_RECEIVED_A_RESET_CODE_HINT": "Si aún no ha recibido su código de reinicio, repita el procedimiento",
     "HAVEN_T_RECEIVED_CONFIRMATION_LINK": "No he recibido el enlace de confirmación.",
@@ -35,6 +37,9 @@
     "I_FORGOT_MY_PASSWORD_HINT": "Recuperar contraseña",
     "NEW_ACCOUNT": "Nueva cuenta",
     "NEW_PASSWORD": "Nueva contraseña",
+    "ONLY_ONE_SIMULTANEOUS_SESSION_ALLOWED": "Múltiples sesiones detectadas",
+    "ONLY_ONE_SIMULTANEOUS_SESSION_ALLOWED_I": "Solo se permite una sesión activa por cuenta",
+    "ONLY_ONE_SIMULTANEOUS_SESSION_ALLOWED_II": "Ya hay una sesión activa para esta cuenta en otro dispositivo; para proceder, debes terminar la otra sesión. Puede terminar todas las sesiones con una salida global, pero head’s up: asegúrate de guardar los datos locales de la aplicación en el otro dispositivo primero, ya que se eliminará.",
     "PASSWORD": "Contraseña",
     "PASSWORD_CHANGED": "¡Contraseña modificada! Ahora puedes volver a acceder",
     "PASSWORD_HINT": "La contraseña que elegiste",
@@ -55,6 +60,8 @@
     "RESET_CODE_HINT": "El código que recibió por correo electrónico después de la solicitud de reinicio",
     "RESET_MY_PASSWORD": "Restablece mi contraseña",
     "RESET_MY_PASSWORD_HINT": "Recibirá un correo electrónico con un código para restablecer su contraseña",
+    "ROBOT_USERS_CANT_SIGN_INTO_APPS": "Usuario del robot detectado",
+    "ROBOT_USERS_CANT_SIGN_INTO_APPS_I": "Los usuarios de robots no pueden iniciar sesión en la aplicación; se crean para fines de back-end.",
     "SENDING_FAILED": "El envío ha fracasado",
     "SERVICE_LOGO": "El logo del servicio",
     "SIGN_IN": "Accede",
@@ -63,6 +70,7 @@
     "TERMS_AND_CONDITIONS": "Términos y condiciones",
     "TERMS_AND_CONDITIONS_HINT": "Leer nuestros terminos y condiciones",
     "USER_NOT_FOUND": "Usuario no encontrado",
+    "VALID_EMAIL_OBLIGATORY": "Es obligatoria una dirección de correo electrónico válida",
     "YOU_NEED_TO_CHOOSE_A_NEW_PASSWORD": "Elige una contraseña nueva para tu cuenta"
   }
 }
