--- a/i18n/auth/it.json
+++ b/i18n/auth/it.json
@@ -5,6 +5,8 @@
     "ALREADY_HAVE_A_RESET_CODE": "Ho già  un codice di reset",
     "ALREADY_HAVE_A_RESET_CODE_HINT": "Se hai già  un codice di reset, procedi al cambio password",
     "AUTHENTICATION_FAILED": "Autenticazione fallita",
+    "BACK_TO_INTRO": "Torna alla homepage",
+    "BACK_TO_INTRO_HINT": "Naviga indietro alla homepage",
     "BACK_TO_REGISTRATION": "Torna alla registrazione",
     "BACK_TO_SIGN_IN": "Torna alla pagina di accesso",
     "BACK_TO_SIGN_IN_HINT": "Torna indietro alla pagina di accesso",
@@ -23,8 +25,8 @@
     "CREATE_AN_ACCOUNT_HINT": "Vai alla pagina di registrazione",
     "EMAIL": "Email",
     "EMAIL_HINT": "L'indirizzo email che hai usato per registrati",
-    "VALID_EMAIL_OBLIGATORY": "Un indirizzo email valido è obbligatorio",
     "ERROR": "Errore",
+    "GLOBAL_SIGN_OUT": "Logout globale",
     "HAVEN_T_RECEIVED_A_RESET_CODE": "Non ho ricevuto il codice di reset",
     "HAVEN_T_RECEIVED_A_RESET_CODE_HINT": "Ripeti la procedura se non hai ancora ricevuto il codice di reset",
     "HAVEN_T_RECEIVED_CONFIRMATION_LINK": "Non ho ancora ricevuto il link di conferma",
@@ -33,10 +35,11 @@
     "IS_THE_EMAIL_CORRECT": "L'email è corretta?",
     "I_FORGOT_MY_PASSWORD": "Password dimenticata",
     "I_FORGOT_MY_PASSWORD_HINT": "Recupera la tua password",
-    "BACK_TO_INTRO": "Torna alla homepage",
-    "BACK_TO_INTRO_HINT": "Naviga indietro alla homepage",
     "NEW_ACCOUNT": "Nuovo account",
     "NEW_PASSWORD": "Nuova password",
+    "ONLY_ONE_SIMULTANEOUS_SESSION_ALLOWED": "Sessioni multiple individuate",
+    "ONLY_ONE_SIMULTANEOUS_SESSION_ALLOWED_I": "È permessa solo una sessione attiva contemporanea per account",
+    "ONLY_ONE_SIMULTANEOUS_SESSION_ALLOWED_II": "È già presente una sessione attiva per questo account su un altro dispositivo; per procedere, occorre terminare l'altra sessione. Puoi terminare tutte le sessioni con un logout globale, ma attenzione: assicurati prima di aver salvato tutti i dati locali dell'app sull'altro dispositivo, perchè verranno eliminati.",
     "PASSWORD": "Password",
     "PASSWORD_CHANGED": "Password cambiata! Puoi effettuare l'accesso ora",
     "PASSWORD_HINT": "La password che hai scelto",
@@ -57,6 +60,8 @@
     "RESET_CODE_HINT": "Il codice che hai ricevuto nell'email dopo la richiesta di reset",
     "RESET_MY_PASSWORD": "Resetta la mia password",
     "RESET_MY_PASSWORD_HINT": "Riceverai un'email a questo indirizzo con un codice per resettare la tua password",
+    "ROBOT_USERS_CANT_SIGN_INTO_APPS": "Utente robot individuato",
+    "ROBOT_USERS_CANT_SIGN_INTO_APPS_I": "Utenti robot non possono accedere in app; sono da utilizzare solo per procedure back-end.",
     "SENDING_FAILED": "Invio fallito",
     "SERVICE_LOGO": "Il logo del servizio",
     "SIGN_IN": "Accedi",
@@ -65,14 +70,7 @@
     "TERMS_AND_CONDITIONS": "Termini e Condizioni",
     "TERMS_AND_CONDITIONS_HINT": "Leggi il nostro documento di Termini e Condizioni",
     "USER_NOT_FOUND": "Utente non trovato",
-    "YOU_NEED_TO_CHOOSE_A_NEW_PASSWORD": "Scegli una password per il tuo account",
-    "ROBOT_USERS_CANT_SIGN_INTO_APPS": "Utente robot individuato",
-    "ROBOT_USERS_CANT_SIGN_INTO_APPS_I": "Utenti robot non possono accedere in app; sono da utilizzare solo per procedure back-end.",
-    "ONLY_ONE_SIMULTANEOUS_SESSION_ALLOWED": "Sessioni multiple individuate",
-    "ONLY_ONE_SIMULTANEOUS_SESSION_ALLOWED_I": "È permessa solo una sessione attiva contemporanea per account",
-    "ONLY_ONE_SIMULTANEOUS_SESSION_ALLOWED_II": "È già presente una sessione attiva per questo account su un altro dispositivo; per procedere, occorre terminare l'altra sessione. Puoi terminare tutte le sessioni con un logout globale, ma attenzione: assicurati prima di aver salvato tutti i dati locali dell'app sull'altro dispositivo, perchè verranno eliminati.",
-    "GLOBAL_SIGN_OUT": "Logout globale",
-    "WARNING": "Attenzione",
-    "CHANGE_YOUR_PASSWORD_TO_LOGIN": "Per effettuare l'accesso devi prima aggiornare la tua password. Hai ricevuto istruzioni al tuo indirizzo email; per piacere, controlla nella tua posta in arrivo o nello SPAM."
+    "VALID_EMAIL_OBLIGATORY": "Un indirizzo email valido è obbligatorio",
+    "YOU_NEED_TO_CHOOSE_A_NEW_PASSWORD": "Scegli una password per il tuo account"
   }
 }
