--- a/i18n/common/es.json
+++ b/i18n/common/es.json
@@ -36,28 +36,42 @@
       "CONFIRM_SELECTION": "Confirma tu selección",
       "DESELECT_ALL": "Deseleccionar todo",
       "DONE": "Hecho",
+      "LIMIT_OF_NUM": "(de{{num}})",
       "NONE": "Ninguna",
       "NO_ELEMENTS_FOUND": "Ningún elemento encontrado",
       "NUM_ELEMENTS_SELECTED": "{{num}} elementos seleccionados",
-      "SEARCH": "Buscar",
-      "SELECT_ALL": "Seleccionar todo",
       "RESET": "Reiniciar",
-      "LIMIT_OF_NUM": "(de {{num}})"
+      "SEARCH": "Buscar",
+      "SELECT_ALL": "Seleccionar todo"
     },
     "CONTACTS": {
+      "CALL": "Llamar",
       "EMAIL": "Email",
       "EMAIL_HINT": "Dirección de correo electrónico",
       "NAME": "Nombre",
       "NAME_HINT": "Nombre de contacto",
       "PHONE": "Telefono",
-      "PHONE_HINT": "Telefono móvil"
+      "PHONE_HINT": "Telefono móvil",
+      "SEND_EMAIL": "Enviar correo"
     },
     "CUSTOM_FIELDS": {
+      "ADD_FIELD": "Añadir un campo",
+      "ADD_FIELD_HINT": "Elige un nombre para el nuevo campo",
+      "ADD_OPTION": "Añade una opción",
+      "ADD_OPTION_HINT": "Añadir una opción para que el usuario pueda elegirla para rellenar el campo",
+      "ADD_ROW": "Añadir una fila",
+      "ADD_SECTION": "Añadir una sección",
+      "ADD_SECTION_HINT": "Elige un nombre para esta nueva sección",
       "CHOICES": "Posibles opciones",
       "CHOOSE_A_KEY": "Elige un nombre para el campo",
       "CLOSE_WITHOUT_SAVING": "Cerrar sin guardar",
       "DEFAULT": "Valor por defecto",
+      "DEFAULT_CHOICE": "Opción por defecto",
+      "DEFAULT_HINT": "El valor a asumir por defecto",
       "DESCRIPTION": "Descripción",
+      "DESCRIPTION_HINT": "Descripción de cómo rellenar el campo",
+      "DISPLAY_TEMPLATE": "Imprimir diseño",
+      "DISPLAY_TEMPLATE_I": "Personaliza el diseño de la sección en el informe PDF. Gestiona varias filas y añade hasta tres campos dentro de cada una, en el orden que prefiera. Si un campo no está en el diseño, no se mostrará en el informe PDF. Las filas vacías se ignorarán.",
       "DUPLICATED_KEY": "Ya existe un campo con ese nombre",
       "FIELDS_TYPES": {
         "BOOLEAN": "Si / No",
@@ -67,13 +81,28 @@
         "TEXT": "Texto largo"
       },
       "FIELD_DELETION_ALERT": "El campo se eliminará irreversiblemente.",
+      "ICON": "Icono",
+      "ICON_HINT": "Icono para reconocer visivamente el campo",
       "MANAGE_FIELD": "Administrar campo",
+      "MANAGE_SECTION": "Gestionar sección",
       "MAX": "Máximo",
+      "MAX_HINT": "El valor más alto que puede tener el campo",
       "MIN": "Mínimo",
+      "MIN_HINT": "El valor más bajo que puede tener el campo",
       "NAME": "Nombre",
+      "NAME_HINT": "Un nombre para reconocer el campo y entender su propósito",
       "NEW_FIELD": "Nuevo campo",
+      "NO_DEFAULT_CHOICE": "No hay elección preseleccionada",
+      "NO_ELEMENTS": "Ningún elemento",
       "OBLIGATORY": "Obligatorio",
+      "OPTIONS": "Elecciones posibles",
       "REMOVE_FIELD": "Eliminar campo",
+      "REMOVE_OPTION": "Eliminar la elección",
+      "ROW": "Fila",
+      "SAVE_CHANGES": "Guardar los cambios",
+      "SECTION_DESCRIPTION_HINT": "Describir brevemente el propósito de la sección",
+      "SECTION_FIELDS": "Campos de la sección",
+      "SECTION_NAME_HINT": "El nombre para identificar la sección",
       "TYPE": "Tipo"
     },
     "DURATION": { "HH": "hh", "HOURS": "Horas", "MINUTES": "Minutos", "MM": "mm", "SECONDS": "Segundos", "SS": "ss" },
@@ -84,17 +113,44 @@
       "EXTERNAL_CALENDARS_SOURCE_INTEGRATION_SUCCESS": "La cuenta externa ahora está vinculada. Regrese a la página de calendarios para completar la configuración",
       "GITHUB_SOURCE_INTEGRATION_ERROR": "Error durante la integración de GitHub; Inténtalo de nuevo.",
       "GITHUB_SOURCE_INTEGRATION_SUCCESS": "GitHub ha sido conectado. Ahora puede completar la configuración.",
-      "GO_TO_HOME_HINT": "Haga clic para ir a la página de inicio del servicio.",
-      "HOMEPAGE": "Volver a la página de inicio",
+      "INVALID_ACTION": "Acción inválida",
       "REQUEST_FAILED": "La solicitud falló; Inténtalo de nuevo.",
       "TEAM_JOINED": "Te uniste con éxito al grupo.",
       "TRELLO_SOURCE_INTEGRATION_ERROR": "Error durante la integración de Trello; Inténtalo de nuevo.",
-      "TRELLO_SOURCE_INTEGRATION_SUCCESS": "Copie y pegue el siguiente token en la página anterior para completar la configuración: {{token}}"
+      "TRELLO_SOURCE_INTEGRATION_SUCCESS": "Copie y pegue el siguiente token en la página anterior para completar la configuración: {{token}}",
+      "YOU_CAN_CLOSE_THE_PAGE": "El nombre para identificar la sección"
+    },
+    "EMAIL": {
+      "ATTACHMENTS": "Archivos adjuntos",
+      "BCC": "Bbc",
+      "CC": "Cc",
+      "CHOOSE_OR_ADD_AN_ADDRESS": "Elige u añade una dirección de correo electrónico ",
+      "CONTENT": "Contenido",
+      "EMAIL_DATA": "Datos del correo",
+      "NO_ADDRESSES": "Ninguna dirección",
+      "NO_ADDRESS_FOUND_YOU_CAN_ADD_ONE": "No se encontró ninguna dirección; escribe para agregar una",
+      "NO_ATTACHMENTS": "Ningún archivo adjunto",
+      "SEND_EMAIL": "Enviar correo",
+      "SUBJECT": "Asunto",
+      "TO": "Para",
+      "VARIABLES_AVAILABLE": "Variables disponibles",
+      "VARIABLES_AVAILABLE_I": "Estas son todas las variables que puede utilizar en el asunto y el contenido. Al enviar un correo electrónico serán sustituidas por sus valores."
+    },
+    "FTTT": {
+      "AM": "Mañana",
+      "FROM": "De",
+      "MINUTES_PREFERENCE": "Minutos de preferencia",
+      "PERIOD": "Período ",
+      "PM": "Tarde",
+      "TO": "Para"
     },
     "LABELER": {
       "EXPLANATION": "Solo la traducción en el idioma predeterminado es obligatoria. Si falta alguna traducción, se utiliza la del idioma predeterminado.",
+      "EXPLANATION_OBLIGATORY": "Solo es obligatoria la traducción en el idioma predeterminado.",
       "FILL_IN_DEFAULT_LANGUAGE": "Debe completar la etiqueta al menos en el idioma predeterminado",
-      "MANAGE_LABEL": "Administrar etiqueta"
+      "MANAGE_LABEL": "Administrar etiqueta",
+      "VARIABLES_AVAILABLE": "Variables disponibles",
+      "VARIABLES_AVAILABLE_I": "Estas son todas las variables que puedes usar en el contenido."
     },
     "LANGUAGE_PICKER": {
       "APP_WILL_RESTART": "La aplicación se reiniciará",
@@ -105,7 +161,9 @@
       "DELETE_ELEMENT": "Elemento borrado",
       "ELEMENT": "Elemento",
       "NEW_ELEMENT": "Nuevo elemento",
-      "SAVE_AND_CLOSE": "Salvar y cerrar"
+      "NO_ELEMENTS_FOUND": "No se encontraron elementos",
+      "NUM_ELEMENTS_": "{{num}} elementos de la lista",
+      "SAVE_AND_CLOSE": "Guardar y cerrar"
     },
     "LOADING": { "PLEASE_WAIT": "Espera por favor..." },
     "MDE": {
@@ -116,41 +174,96 @@
       "VARIABLES": "Variables"
     },
     "OFFLINE": {
+      "ADVANCED_ACTIONS": "Acciones avanzadas",
+      "CANCEL_REQUEST": "Eliminar solicitud",
       "DELETION_IS_IRREVERSIBLE": "La eliminación es irreversible.",
+      "DONT_EXIT_APP_DISCLAIMER": "Por favor, no sales de la aplicación durante la sincronización",
       "DOWNLOAD": "Descargar",
+      "DOWNLOAD_LOG": "Descargar un registro de la solicitud fallida",
       "DOWNLOAD_RESOURCES_EXPLANATION": "Lista de los recursos disponibles sin conexión",
+      "ERROR_CODE": "Error código",
       "ERROR_DURING_LAST_SYNC": "Hubo un error durante la última sincronización; Inténtalo de nuevo.",
       "FEATURES_REDUCED_CONTENTS_NOT_UP_TO_DATE": "La funcionalidad se reduce y los contenidos pueden no estar actualizados",
       "FORCE_FULL_SYNC": "Forzar sincronización completa",
+      "FULL_SYNC_DISCLAIMER": "Todos los datos fuera de línea serán eliminados; la operación podría tardar varios minutos",
       "HUGE_SYNC_NEED_MANUAL_CONFIRMATION": "Hay muchos datos para sincronizar. Confirmar para continuar.",
       "LAST_SYNC": "Última sincronización",
       "LOADING": "Cargando...",
+      "NEVER": "Nunca",
       "NOW": "Ahora",
       "NO_ELEMENTS_TO_UPLOAD": "No hay elementos para cargar",
       "OFFLINE_MANAGER": "Administrador sin conexión\n",
-      "REQUEST_FAILED": "Solicitud fallida; intente nuevamente o cancele la solicitud",
+      "REQUEST_FAILED_EXPLANATION_I": "La carga para este recurso falló; inténtelo de nuevo.",
+      "REQUEST_FAILED_EXPLANATION_II": "Si el error persiste, cancelar la solicitud para continuar.",
+      "REQUEST_FAILED_EXPLANATION_III": "Puedes solicitar un registro del error para un análisis adicional.",
       "SYNC_IN_PROGRESS": "Sincronización en progreso",
       "SYNC_NOW": "Sincronizar",
       "UPLOAD": "Subir archivo",
       "UPLOAD_QUEUE_REQUESTS_EXPLANATION": "Los recursos creados sin conexión deben cargarse en línea",
       "YOU_ARE_OFFLINE": "Está fuera de línea"
     },
+    "PDF_TEMPLATE": {
+      "ADD_A_SECTION": "Añadir una nueva sección a la plantilla",
+      "BLANK_ROW": "Fila en blanco",
+      "BLANK_ROW_I": "Ver una fila vacía, para crear espacio entre los contenidos",
+      "BREADCRUMB_I": "Aquí arriba puedes ver en qué área de la plantilla estás trabajando.",
+      "BREADCRUMB_II": "Puede navegar por las áreas internas de la plantilla tocándolas.",
+      "CHOOSE_WHERE_TO_MOVE_FIELD": "Elegir dónde mover el campo",
+      "COMPLEX_FIELD": "Campo complejo",
+      "EDIT_SECTIONS": "Editar las secciones ",
+      "EDIT_TEMPLATE": "Editar la plantilla",
+      "HEADER": "Encabezado",
+      "HEADER_I": "Fila de encabezado, para separar dos áreas de la plantilla",
+      "INNER_SECTION": "Sección interna",
+      "INNER_SECTION_I": "Sección secundaria de la actual; se utiliza para administrar campos de un contexto interno",
+      "INNER_SECTION_TITLE": "Título de la sección interna",
+      "INNER_SECTION_TITLE_EMPTY_NOT_SHOWN": "Todavía no hay un título por lo que no se mostrará",
+      "INNER_SECTION_TITLE_I": "El título de la sección interna se muestra solo si la sección tiene algunos datos para mostrar; déjala vacía en caso de que nunca desee mostrarla.",
+      "INSERT_FIELDS_IN_NORMAL_SECTION": "Puedes agregar campos en la plantilla pulsando una columna vacía en una fila.",
+      "NAVIGATE_BACK": "Regresar",
+      "NEW_HEADER": "Nuevo encabezado",
+      "NORMAL_ROW": "Fila normal",
+      "NO_EMPTY_SLOT_WHERE_TO_MOVE_FIELD": "No hay una ranura vacía donde se pueda mover el campo. Añade una nueva fila.",
+      "NO_SECTION_DEFINED_YET_HERE": "No hay sección definida aquí; pueda añadir una a través de los botones de acción anteriores.",
+      "ONE_OR_MORE_SECTIONS_HAVE_ERRORS": "Una o más secciones tienen errores; por favor, comprobar antes de continuar.",
+      "PAGE_BREAK": "Salto de página",
+      "PAGE_BREAK_I": "Ir a una nueva página después de esta fila",
+      "REMOVE_SECTION": "Eliminar la sección de la plantilla",
+      "REPEATED_INNER_SECTION": "Sección interna repetida",
+      "REPEATED_INNER_SECTION_I": "Sección secundaria de la actual; se utiliza para administrar campos de un contexto interno. Sobre la base de los datos disponibles, podría repetirse más veces cuando se imprima.",
+      "SECTION": "Sección ",
+      "SECTIONS": "Secciones ",
+      "SIMPLE_FIELD": "Campo simple",
+      "SIZE": "Tamaño",
+      "WHAT_DO_YOU_WANT_TO_DO_WITH_FIELD": "¿Qué quieres hacer con el campo?",
+      "WHAT_DO_YOU_WANT_TO_INSERT": "¿Qué es lo que quieres insertar?",
+      "YOU_CAN_INSERT_SPECIAL_SECTIONS": "Basado en su posición en la plantilla, serás capaz de agregar diferentes tipos de secciones."
+    },
     "SELECT": {
       "CLEAR_SELECTION": "Borrar selección",
       "CLOSE_WITHOUT_SELECTING": "Cerrar sin seleccionar nada",
+      "HIDE_DETAILS": "Ocultar detalles",
       "NO_ELEMENTS_FOUND": "No se encontraron elementos",
+      "NO_ELEMENTS_FOUND_START_TYPING_TO_ADD_ONE": "No se encontraron elementos; comienza a escribir para agregar uno nuevo.",
       "SEARCH": "Buscar",
       "SELECT_": "Seleccione {{sugerencia}}",
+      "SHOW_DETAILS": "Mostrar detalles",
       "TAP_TO_FILTER": "Seleccionar para filtrar"
+    },
+    "SENTIMENT": {
+      "RESULT": { "MIXED": "Mezclado", "NEGATIVE": "Negativo", "NEUTRAL": "Neutral ", "POSITIVE": "Positivo" },
+      "RESULT_HINT": "Detectamos un sentimiento de {{sentimiento}} general del texto"
     },
     "SIGNATURE": {
       "CANCEL": "Cancelar",
+      "CHOOSE_FROM_CONTACTS": "Eligir de los contactos",
       "CLEAR_SIGNATURE": "Borrar la firma",
       "NAME_AND_SURNAME": "Nombre y apellidos",
       "SAVE_SIGNATURE": "Guardar la firma",
       "SIGNATORY": "El firmante",
       "SIGNATURE": "Firma",
       "SIGNATURE_EXPLANATION": "Firme abajo",
+      "SIGNATURE_IS_TOO_COMPLEX": "La firma es demasiado compleja; por favor, firma de nuevo",
       "VERIFY_SIGNATORY_AND_SIGNATURE": "Verifica la firma y el firmante"
     }
   }
