--- a/i18n/teams/es.json
+++ b/i18n/teams/es.json
@@ -36,26 +36,63 @@
       "NO_ATTACHMENT": "No hay adjuntos",
       "NO_NAME": "Sin nombre",
       "REMOVE_ATTACHMENT": "Eliminar el archivo adjunto",
+      "TAP_TO_ADD_ATTACHMENT": "Pinchar para añadir un anexo",
       "UPLOADING": "Actualizando...",
       "UPLOADING_ATTACHMENT_WARNING": "Cargando el archivo adjunto, no salga de la página"
     },
     "RESOURCE_CENTER": {
+      "ACTIONS_ON_RESOURCE": "Acciones en los recursos",
+      "ACTIONS_ON_THE_RESOURCE": "Acciones en los recursos",
+      "COULDNT_LOAD_LIST": "No pudo cargar la lista",
+      "CREATE_NEW_FOLDER": "Crear un nuevo archivo",
+      "DELETE": "Borrar",
+      "ERROR_CREATING_RESOURCE_FILE": "{{nombre}}: error en la creación del recurso ",
       "ERROR_OPENING_RESOURCE": "Error al abrir el recurso",
+      "FOLDER_WITH_SAME_NAME_ALREADY_EXISTS": "Un archivo ya existe con el mismo nombre ",
+      "INVALID_FORMAT_FILE_": "{{nombre}}: formato no permitido (solo: jpg, jpeg, png, pdf).",
+      "INVALID_SIZE_FILE_": "{{nombre}}: archivo demasiado grande (max 10 MB).",
+      "LASTLY_UPDATED_X_AGO": "Actualizado por último ",
+      "NAME": "Nombre",
+      "NAME_MUST_BE_UNIQUE_IN_FOLDER": "El nombre tiene que ser único en la carpeta.",
+      "NAME_MUST_BE_UNIQUE_IN_RC": "El nombre tiene que ser único en el Centro de Recursos.",
       "NO_FOLDER_SELECTED": "Ninguna carpeta seleccionada",
       "NO_NAME": "No hay nombre",
       "NO_RESOURCES": "No hay recursos",
+      "ONE_OR_MORE_FILE_UPLOAD_FAILED": "Falló la carga de uno o más archivos",
       "OPEN_OLD_VERSION": "Abrir la versión más antigua",
+      "OPEN_RESOURCE": "Abrir la versión actual del recurso",
       "REMOVE_RESOURCE": "Eliminar el recurso",
-      "SELECT_FOLDER": "Selecciona una carpeta",
-      "VERSION_ATTACHED_IS_OLDER": "El recurso se ha actualizado desde que se adjuntó"
+      "RENAME": "Renombrar",
+      "RENAME_FOLDER": "Renombrar la carpeta",
+      "RENAME_RESOURCE": "Renombrar el recurso",
+      "RESOURCES_AVAILABLE": "Recursos disponibles",
+      "RESOURCE_WITH_SAME_NAME_ALREADY_EXISTS": "Ya existe un recurso con el mismo nombre",
+      "SEARCH_FOR_FOLDERS": "Filtra las carpetas en tu Centro de Recursos",
+      "SEARCH_FOR_RESOURCES_OF_FOLDER_": "Filtrar los recursos contenidos en '{{carpeta}}'",
+      "SELECT_FOLDER": "Seleccionar una carpeta",
+      "SELECT_FOLDER_NAME": "Seleccionar un nombre para la carpeta",
+      "SELECT_RESOURCE_NAME": "Seleccionar un nombre para el recurso",
+      "TAP_TO_ADD_A_RESOURCE": "Toca para añadir un recurso...",
+      "THE_FOLLOWING_FILES_FAILED_UPLOAD": "Los siguientes archivos no se pudieron cargar",
+      "UPLOAD_COMPLETED": "Carga completada",
+      "UPLOAD_ERROR_FILE": "{{nombre}}: error al cargar el archivo.",
+      "UPLOAD_FAILED": "Carga falllida",
+      "UPLOAD_NEW_RESOURCES": "Cargar nuevos recursos en esta carpeta",
+      "UPLOAD_NEW_VERSION": "Cargar nueva versión",
+      "VERSION_ATTACHED_IS_OLDER": "El recurso se ha actualizado desde que se adjuntó",
+      "YOU_WILL_USE_ALL_FILES_IN_FOLDER": "Vas a perder todos los archivos contenidos en la carpeta."
     },
     "TEAMS": {
+      "ACTIVE_ON": "Activo en",
       "CURRENT": "Actual",
       "CURRENT_TEAM_EXPLANATION": "Seleccionar grupo actual",
+      "NO_TEAMS_AVAILABLE": "No tienes equipos disponibles",
+      "PROJECTS_NAMES": { "arthur": "Arthur", "luigi": "Luigi", "orazio": "Horace", "scarlett": "Scarlett" },
       "SELECT_A_TEAM": "Seleccionar grupo",
-      "SELECT_TEAM_": "Seleccional el grupo {{team}}",
-      "YOU_NEED_A_TEAM_TO_CONTINUE": "Necesites de un equipe para continuar",
-      "NO_TEAMS_AVAILABLE": "No tienes equipos disponibles"
+      "SELECT_TEAM_": "Seleccional un grupo {{team}}",
+      "TEAM_NAME": "Nombre del grupo",
+      "TEAM_NOT_ACTIVATED_DISCLAIMER": "El grupo aún no se ha activado; contactar a un administrador",
+      "YOU_NEED_A_TEAM_TO_CONTINUE": "Necesites de un equipe para continuar"
     }
   }
 }
