--- a/i18n/agenda/it.json
+++ b/i18n/agenda/it.json
@@ -1,8 +1,5 @@
 {
   "IDEA_AGENDA": {
-    "DAY": "Giorno",
-    "MONTH": "Mese",
-    "WEEK": "Settimana",
     "CALENDARS": {
       "ACCESS_LEVELS": {
         "0": "Vedi solo stato libero/occupato",
@@ -24,6 +21,7 @@
       "COLOR": "Colore distintivo",
       "CREATE_PRIVATE_OR_TEAM": "Vuoi creare un calendario privato o condiviso col team?",
       "DANGEROUS_ZONE": "Zona pericolosa",
+      "DEFAULT": "Predefinito",
       "DEFAULT_PERSONAL_CALENDAR_NAME": "Il mio calendario",
       "DEFAULT_TEAM_CALENDAR_NAME": "Il calendario del mio team",
       "DELETE_CALENDAR": "Elimina calendario",
@@ -32,8 +30,6 @@
       "DESCRIPTION_HINT": "Descrizione del calendario",
       "DONT_LINK": "Non collegare",
       "DONT_LINK_HINT": "Il calendario non sarà  sincronizzato con un servizio esterno",
-      "WHICH_EXTERNAL_SERVICE_TO_LINK": "Quale servizio esterno vuoi collegare al calendario?",
-      "WHICH_EXTERNAL_SERVICE_TO_LINK_HINT": "Nota bene: non puoi cambiare questa configurazione in seguito",
       "DO_YOU_WANT_PROCEED_LINKING_OR_DELETE": "Vuoi provare ancora a collegarlo o preferisci eliminarlo?",
       "EDIT_CALENDAR": "Modifica calendario",
       "EVERYONE": "Tutti",
@@ -55,16 +51,20 @@
       "PERSONAL_CALENDARS_HINT": "Questi calendari e i relativi appuntamenti sono visibili solo a te",
       "PERSONAL_CALENDAR_HINT": "Il calendario e i relativi appuntamenti sono visibili solo a te",
       "SERVICES": { "GOOGLE": "Google Calendar", "MICROSOFT": "Microsoft Outlook" },
+      "SET_AS_DEFAULT": "Rendi predefinito",
+      "SET_AS_DEFAULT_HINT": "Seleziona il calendario come predefinito: sarà il primo a essere suggerito in agenda",
       "TAP_TO_CONFIGURE": "Tocca per configurare",
       "TEAM_CALENDAR": "Calendario del team",
       "TEAM_CALENDARS": "Calendari del team",
       "TEAM_CALENDARS_HINT": "Questi calendari e i loro appuntamenti sono visibili all'intero team",
       "TEAM_CALENDAR_HINT": "Questi calendari e i loro appuntamenti sono visibili all'intero team",
       "USERS_ALLOWED_TO_MANAGE_APPOINTMENTS": "Utenti che possono gestire gli appuntamenti",
-      "WHO_CAN_MANAGE_APPOINTMENTS": "Chi può gestire gli appuntamenti",
-      "SET_AS_DEFAULT": "Rendi predefinito",
-      "SET_AS_DEFAULT_HINT": "Seleziona il calendario come predefinito: sarà il primo a essere suggerito in agenda",
-      "DEFAULT": "Predefinito"
-    }
+      "WHICH_EXTERNAL_SERVICE_TO_LINK": "Quale servizio esterno vuoi collegare al calendario?",
+      "WHICH_EXTERNAL_SERVICE_TO_LINK_HINT": "Nota bene: non puoi cambiare questa configurazione in seguito",
+      "WHO_CAN_MANAGE_APPOINTMENTS": "Chi può gestire gli appuntamenti"
+    },
+    "DAY": "Giorno",
+    "MONTH": "Mese",
+    "WEEK": "Settimana"
   }
 }
