--- a/i18n/auth/en.json
+++ b/i18n/auth/en.json
@@ -5,6 +5,8 @@
     "ALREADY_HAVE_A_RESET_CODE": "I already have a reset code",
     "ALREADY_HAVE_A_RESET_CODE_HINT": "If you already have a reset code, go on and change your password",
     "AUTHENTICATION_FAILED": "Authentication failed",
+    "BACK_TO_INTRO": "Back to the homepage",
+    "BACK_TO_INTRO_HINT": "Navigate back to the homepage",
     "BACK_TO_REGISTRATION": "Back to registration",
     "BACK_TO_SIGN_IN": "Back to sign in",
     "BACK_TO_SIGN_IN_HINT": "Go back to the sign-in page",
@@ -23,8 +25,8 @@
     "CREATE_AN_ACCOUNT_HINT": "Go to the registration page",
     "EMAIL": "Email",
     "EMAIL_HINT": "The email address you used to register",
-    "VALID_EMAIL_OBLIGATORY": "A valid email address is obligatory",
     "ERROR": "Error",
+    "GLOBAL_SIGN_OUT": "Global sign-out",
     "HAVEN_T_RECEIVED_A_RESET_CODE": "I haven't received the reset code yet",
     "HAVEN_T_RECEIVED_A_RESET_CODE_HINT": "If you haven't received your reset code yet, repeat the procedure",
     "HAVEN_T_RECEIVED_CONFIRMATION_LINK": "I haven't received the confirmation link",
@@ -33,10 +35,11 @@
     "IS_THE_EMAIL_CORRECT": "Is the email correct?",
     "I_FORGOT_MY_PASSWORD": "Forgot password",
     "I_FORGOT_MY_PASSWORD_HINT": "Recover your password",
-    "BACK_TO_INTRO": "Back to the homepage",
-    "BACK_TO_INTRO_HINT": "Navigate back to the homepage",
     "NEW_ACCOUNT": "New account",
     "NEW_PASSWORD": "New password",
+    "ONLY_ONE_SIMULTANEOUS_SESSION_ALLOWED": "Multiple sessions detected",
+    "ONLY_ONE_SIMULTANEOUS_SESSION_ALLOWED_I": "Only one active session per account is allowed",
+    "ONLY_ONE_SIMULTANEOUS_SESSION_ALLOWED_II": "There is already one active session for this account on another device; to proceed, you need to terminate the other session. You can terminate all the sessions with a global sign-out, but head's up: be sure to save any local data of the app on the other device first, since it will be deleted.",
     "PASSWORD": "Password",
     "PASSWORD_CHANGED": "Password changed! Now you can sign in again",
     "PASSWORD_HINT": "The password you chose",
@@ -57,6 +60,8 @@
     "RESET_CODE_HINT": "The code you received by email after the reset request",
     "RESET_MY_PASSWORD": "Reset my password",
     "RESET_MY_PASSWORD_HINT": "You will receive an email containing a code to reset your password",
+    "ROBOT_USERS_CANT_SIGN_INTO_APPS": "Robot user detected",
+    "ROBOT_USERS_CANT_SIGN_INTO_APPS_I": "Robot users can't sign-into the app; they are created for back-end purposes.",
     "SENDING_FAILED": "Sending failed",
     "SERVICE_LOGO": "The service's logo",
     "SIGN_IN": "Sign in",
@@ -65,14 +70,7 @@
     "TERMS_AND_CONDITIONS": "Terms and Conditions",
     "TERMS_AND_CONDITIONS_HINT": "Read our Terms and Conditions",
     "USER_NOT_FOUND": "User not found",
-    "YOU_NEED_TO_CHOOSE_A_NEW_PASSWORD": "Choose a new password for your account",
-    "ROBOT_USERS_CANT_SIGN_INTO_APPS": "Robot user detected",
-    "ROBOT_USERS_CANT_SIGN_INTO_APPS_I": "Robot users can't sign-into the app; they are created for back-end purposes.",
-    "ONLY_ONE_SIMULTANEOUS_SESSION_ALLOWED": "Multiple sessions detected",
-    "ONLY_ONE_SIMULTANEOUS_SESSION_ALLOWED_I": "Only one active session per account is allowed",
-    "ONLY_ONE_SIMULTANEOUS_SESSION_ALLOWED_II": "There is already one active session for this account on another device; to proceed, you need to terminate the other session. You can terminate all the sessions with a global sign-out, but head's up: be sure to save any local data of the app on the other device first, since it will be deleted.",
-    "GLOBAL_SIGN_OUT": "Global sign-out",
-    "WARNING": "Warning",
-    "CHANGE_YOUR_PASSWORD_TO_LOGIN": "Before to log-in, you need to change your password. You've received instructions to your email address. Please, check in your inbox or into the SPAM folder."
+    "VALID_EMAIL_OBLIGATORY": "A valid email address is obligatory",
+    "YOU_NEED_TO_CHOOSE_A_NEW_PASSWORD": "Choose a new password for your account"
   }
 }
