--- a/i18n/common/it.json
+++ b/i18n/common/it.json
@@ -36,22 +36,22 @@
       "CONFIRM_SELECTION": "Conferma la tua selezione",
       "DESELECT_ALL": "Deseleziona tutto",
       "DONE": "Fatto",
+      "LIMIT_OF_NUM": "(di {{num}})",
       "NONE": "Nessuno",
       "NO_ELEMENTS_FOUND": "Nessun elemento trovato",
       "NUM_ELEMENTS_SELECTED": "{{num}} elementi selezionati",
-      "SEARCH": "Ricerca",
-      "SELECT_ALL": "Seleziona tutto",
       "RESET": "Reset",
-      "LIMIT_OF_NUM": "(di {{num}})"
+      "SEARCH": "Ricerca",
+      "SELECT_ALL": "Seleziona tutto"
     },
     "CONTACTS": {
+      "CALL": "Chiama",
       "EMAIL": "Email",
       "EMAIL_HINT": "Indirizzo email",
       "NAME": "Nome",
       "NAME_HINT": "Nome completo del contatto",
       "PHONE": "Telefono",
       "PHONE_HINT": "Numero di telefono/cellulare",
-      "CALL": "Chiama",
       "SEND_EMAIL": "Invia email"
     },
     "CUSTOM_FIELDS": {
@@ -66,6 +66,7 @@
       "CHOOSE_A_KEY": "Scegli un nome per il campo",
       "CLOSE_WITHOUT_SAVING": "Chiudi senza salvare",
       "DEFAULT": "Valore predefinito",
+      "DEFAULT_CHOICE": "Scelta predefinita",
       "DEFAULT_HINT": "Il valore da assumere come predefinito",
       "DESCRIPTION": "Descrizione",
       "DESCRIPTION_HINT": "Descrizione di come il campo dovrebbe essere compilato",
@@ -91,6 +92,7 @@
       "NAME": "Nome",
       "NAME_HINT": "Un nome per riconoscere il campo e capirne lo scopo",
       "NEW_FIELD": "Nuovo campo",
+      "NO_DEFAULT_CHOICE": "Nessuna scelta pre-selezionata",
       "NO_ELEMENTS": "Nessun elemento",
       "OBLIGATORY": "Obbligatorio",
       "OPTIONS": "Scelte possibili",
@@ -101,24 +103,22 @@
       "SECTION_DESCRIPTION_HINT": "Descrivi brevemente lo scopo della sezione",
       "SECTION_FIELDS": "Campi della sezione",
       "SECTION_NAME_HINT": "Il nome per identificare la sezione",
-      "TYPE": "Tipo",
-      "DEFAULT_CHOICE": "Scelta predefinita",
-      "NO_DEFAULT_CHOICE": "Nessuna scelta pre-selezionata"
+      "TYPE": "Tipo"
     },
     "DURATION": { "HH": "ore", "HOURS": "Ore", "MINUTES": "Minuti", "MM": "min", "SECONDS": "Secondi", "SS": "sec" },
     "ECHO": {
-      "INVALID_ACTION": "Azione non valida",
-      "YOU_CAN_CLOSE_THE_PAGE": "Puoi chiudere questa pagina ora.",
       "ACCOUNT_CONFIRMED": "Account confermato: puoi procedere con il login.",
       "EMAIL_CHANGED": "Indirizzo email cambiato con successo. Dovrai ora autenticarti nuovamente.",
       "EXTERNAL_CALENDARS_SOURCE_INTEGRATION_ERROR": "Errore nel collegamento all'account esterno; riprovare",
       "EXTERNAL_CALENDARS_SOURCE_INTEGRATION_SUCCESS": "L'account esterno è stato collegato. Torna alla pagina dei calendari per completare la configurazione",
       "GITHUB_SOURCE_INTEGRATION_ERROR": "Errore nell'integrazione di GitHub; riprovare.",
       "GITHUB_SOURCE_INTEGRATION_SUCCESS": "GitHub è stato collegato. Puoi ora terminare la configurazione.",
+      "INVALID_ACTION": "Azione non valida",
       "REQUEST_FAILED": "La richiesta specificata è fallita; riprovare.",
       "TEAM_JOINED": "Ti sei unito al team con successo.",
       "TRELLO_SOURCE_INTEGRATION_ERROR": "Errore nell'integrazione di Trello; riprovare.",
-      "TRELLO_SOURCE_INTEGRATION_SUCCESS": "Copia e incolla il seguente token nella schermata precedente per completare la configurazione: {{token}}"
+      "TRELLO_SOURCE_INTEGRATION_SUCCESS": "Copia e incolla il seguente token nella schermata precedente per completare la configurazione: {{token}}",
+      "YOU_CAN_CLOSE_THE_PAGE": "Puoi chiudere questa pagina ora."
     },
     "EMAIL": {
       "ATTACHMENTS": "Allegati",
@@ -137,16 +137,16 @@
       "VARIABLES_AVAILABLE_I": "Queste sono le variabili che puoi usare in oggetto e contenuto dell'email. All'invio di un'email verranno sostituite dai loro valori."
     },
     "FTTT": {
-      "FROM": "Dalle",
-      "TO": "Alle",
       "AM": "Mattina",
-      "PM": "Pomeriggio",
+      "FROM": "Dalle",
       "MINUTES_PREFERENCE": "Preferenza minuti",
-      "PERIOD": "Periodo"
+      "PERIOD": "Periodo",
+      "PM": "Pomeriggio",
+      "TO": "Alle"
     },
     "LABELER": {
-      "EXPLANATION_OBLIGATORY": "Solo la traduzione nella lingua di default è obbligatoria.",
       "EXPLANATION": "Se una qualsiasi traduzione è mancante, verrà usata quella nella lingua di default.",
+      "EXPLANATION_OBLIGATORY": "Solo la traduzione nella lingua di default è obbligatoria.",
       "FILL_IN_DEFAULT_LANGUAGE": "Devi compilare almeno nella lingua di default",
       "MANAGE_LABEL": "Gestisci etichetta",
       "VARIABLES_AVAILABLE": "Variabili disponibili",
@@ -175,10 +175,13 @@
     },
     "OFFLINE": {
       "ADVANCED_ACTIONS": "Azioni avanzate",
+      "CANCEL_REQUEST": "Annulla la richiesta",
       "DELETION_IS_IRREVERSIBLE": "La cancellazione è irreversibile",
       "DONT_EXIT_APP_DISCLAIMER": "Per piacere, non uscire dall'app durante la sincronizzazione",
       "DOWNLOAD": "Download",
+      "DOWNLOAD_LOG": "Scarica un log della richiesta fallita",
       "DOWNLOAD_RESOURCES_EXPLANATION": "Lista delle risorse disponibili quando offline",
+      "ERROR_CODE": "Codice errore",
       "ERROR_DURING_LAST_SYNC": "Si è verificato un errore durante l'ultima sincronizzazione; per favore riprova.",
       "FEATURES_REDUCED_CONTENTS_NOT_UP_TO_DATE": "Le funzionalità  sono ridotte e i contenuti potrebbero non essere aggiornati",
       "FORCE_FULL_SYNC": "Sincronizzazione da zero",
@@ -193,9 +196,6 @@
       "REQUEST_FAILED_EXPLANATION_I": "Caricamento della risorsa fallito; per piacere, riprova.",
       "REQUEST_FAILED_EXPLANATION_II": "Se l'errore persiste, cancella la richiesta per procedere.",
       "REQUEST_FAILED_EXPLANATION_III": "Puoi richiedere un log dell'errore per ulteriori analisi.",
-      "ERROR_CODE": "Codice errore",
-      "CANCEL_REQUEST": "Annulla la richiesta",
-      "DOWNLOAD_LOG": "Scarica un log della richiesta fallita",
       "SYNC_IN_PROGRESS": "Sincronizzazione in corso",
       "SYNC_NOW": "Sync",
       "UPLOAD": "Upload",
@@ -203,60 +203,55 @@
       "YOU_ARE_OFFLINE": "Sei offline"
     },
     "PDF_TEMPLATE": {
-      "EDIT_TEMPLATE": "Modifica template",
-      "BREADCRUMB_I": "Qui sopra viene indicato in quale area del template stai lavorando.",
-      "BREADCRUMB_II": "Puoi navigare aree interne del template toccandole.",
-      "NAVIGATE_BACK": "Naviga indietro",
-      "SECTION": "Sezione",
       "ADD_A_SECTION": "Aggiungi una nuova sezione al template",
-      "REMOVE_SECTION": "Rimuovi la sezione dal template",
-      "SECTIONS": "Sezioni",
-      "EDIT_SECTIONS": "Modifica le sezioni",
-      "INSERT_FIELDS_IN_NORMAL_SECTION": "Puoi aggiungere campi nel template toccando una colonna vuota in una riga.",
-      "PAGE_BREAK": "Salto pagina",
-      "PAGE_BREAK_I": "Vai alla pagina successiva dopo questa riga",
       "BLANK_ROW": "Riga vuota",
       "BLANK_ROW_I": "Visualizza una riga vuota, per spaziare i contenuti",
+      "BREADCRUMB_I": "Qui sopra viene indicato in quale area del template stai lavorando.",
+      "BREADCRUMB_II": "Puoi navigare aree interne del template toccandole.",
+      "CHOOSE_WHERE_TO_MOVE_FIELD": "Scegli dove spostare il campo",
+      "COMPLEX_FIELD": "Campo complesso",
+      "EDIT_SECTIONS": "Modifica le sezioni",
+      "EDIT_TEMPLATE": "Modifica template",
       "HEADER": "Intestazione",
       "HEADER_I": "Riga di intestazione per separare due aree del template",
-      "INNER_SECTION_TITLE": "Titolo della sezione interna",
-      "INNER_SECTION_TITLE_I": "Il titolo della sezione interna è mostrato solo se la sezione ha dati da mostrare; lascialo vuoto nel caso non vuoi mai mostrarlo.",
-      "INNER_SECTION_TITLE_EMPTY_NOT_SHOWN": "Il titolo è attualmente vuoto, quindi non verrà mostrato",
       "INNER_SECTION": "Sezione interna",
       "INNER_SECTION_I": "Sezione figlia dell'attuale, per gestire i campi di un altro contesto",
+      "INNER_SECTION_TITLE": "Titolo della sezione interna",
+      "INNER_SECTION_TITLE_EMPTY_NOT_SHOWN": "Il titolo è attualmente vuoto, quindi non verrà mostrato",
+      "INNER_SECTION_TITLE_I": "Il titolo della sezione interna è mostrato solo se la sezione ha dati da mostrare; lascialo vuoto nel caso non vuoi mai mostrarlo.",
+      "INSERT_FIELDS_IN_NORMAL_SECTION": "Puoi aggiungere campi nel template toccando una colonna vuota in una riga.",
+      "NAVIGATE_BACK": "Naviga indietro",
+      "NEW_HEADER": "Nuova intestazione",
+      "NORMAL_ROW": "Riga normale",
+      "NO_EMPTY_SLOT_WHERE_TO_MOVE_FIELD": "Non c'è nessuno spazio vuoto dove spostare il campo; aggiungi una nuova riga.",
+      "NO_SECTION_DEFINED_YET_HERE": "Nessuna sezione definita qui; puoi aggiungerne tramite i tasti azione in alto.",
+      "ONE_OR_MORE_SECTIONS_HAVE_ERRORS": "Una o più sezione hanno errori; verifica prima di procedere.",
+      "PAGE_BREAK": "Salto pagina",
+      "PAGE_BREAK_I": "Vai alla pagina successiva dopo questa riga",
+      "REMOVE_SECTION": "Rimuovi la sezione dal template",
       "REPEATED_INNER_SECTION": "Sezione interna ripetuta",
       "REPEATED_INNER_SECTION_I": "Sezione figlia dell'attuale, per gestire i campi di un altro contesto; in base ai dati disponibili, potrebbe essere ripetuta in fase di stampa",
-      "NO_SECTION_DEFINED_YET_HERE": "Nessuna sezione definita qui; puoi aggiungerne tramite i tasti azione in alto.",
-      "NORMAL_ROW": "Riga normale",
-      "WHAT_DO_YOU_WANT_TO_INSERT": "Cosa vuoi inserire?",
-      "NEW_HEADER": "Nuova intestazione",
-      "YOU_CAN_INSERT_SPECIAL_SECTIONS": "In base alla tua posizione nel template, potrai aggiungere tipi di sezione diverse.",
+      "SECTION": "Sezione",
+      "SECTIONS": "Sezioni",
       "SIMPLE_FIELD": "Campo semplice",
-      "COMPLEX_FIELD": "Campo complesso",
-      "WHAT_DO_YOU_WANT_TO_DO_WITH_FIELD": "Cosa vuoi fare col campo?",
-      "NO_EMPTY_SLOT_WHERE_TO_MOVE_FIELD": "Non c'è nessuno spazio vuoto dove spostare il campo; aggiungi una nuova riga.",
-      "CHOOSE_WHERE_TO_MOVE_FIELD": "Scegli dove spostare il campo",
       "SIZE": "Dimensione",
-      "ONE_OR_MORE_SECTIONS_HAVE_ERRORS": "Una o più sezione hanno errori; verifica prima di procedere."
+      "WHAT_DO_YOU_WANT_TO_DO_WITH_FIELD": "Cosa vuoi fare col campo?",
+      "WHAT_DO_YOU_WANT_TO_INSERT": "Cosa vuoi inserire?",
+      "YOU_CAN_INSERT_SPECIAL_SECTIONS": "In base alla tua posizione nel template, potrai aggiungere tipi di sezione diverse."
     },
     "SELECT": {
       "CLEAR_SELECTION": "Svuota selezione",
       "CLOSE_WITHOUT_SELECTING": "Chiudi senza selezionare nulla",
+      "HIDE_DETAILS": "Nascondi dettagli",
       "NO_ELEMENTS_FOUND": "Nessun elemento trovato",
       "NO_ELEMENTS_FOUND_START_TYPING_TO_ADD_ONE": "Nessun elemento trovato; comincia a digitare per aggiungerne uno.",
       "SEARCH": "Ricerca",
       "SELECT_": "Seleziona {{suggestion}}",
-      "TAP_TO_FILTER": "Tocca per filtrare",
       "SHOW_DETAILS": "Mostra dettagli",
-      "HIDE_DETAILS": "Nascondi dettagli"
+      "TAP_TO_FILTER": "Tocca per filtrare"
     },
     "SENTIMENT": {
-      "RESULT": {
-        "POSITIVE": "Positivo",
-        "NEGATIVE": "Negativo",
-        "NEUTRAL": "Neutro",
-        "MIXED": "Misto"
-      },
+      "RESULT": { "MIXED": "Misto", "NEGATIVE": "Negativo", "NEUTRAL": "Neutro", "POSITIVE": "Positivo" },
       "RESULT_HINT": "Si deduce dal testo un sentimento generalmente {{sentiment}}"
     },
     "SIGNATURE": {
@@ -268,8 +263,8 @@
       "SIGNATORY": "Firmatario",
       "SIGNATURE": "Firma",
       "SIGNATURE_EXPLANATION": "Disegna la firma qui sotto",
-      "VERIFY_SIGNATORY_AND_SIGNATURE": "Verifica firmatario e firma",
-      "SIGNATURE_IS_TOO_COMPLEX": "La firma è troppo complessa; per piacere, ripetila"
+      "SIGNATURE_IS_TOO_COMPLEX": "La firma è troppo complessa; per piacere, ripetila",
+      "VERIFY_SIGNATORY_AND_SIGNATURE": "Verifica firmatario e firma"
     }
   }
 }
