--- a/i18n/teams/en.json
+++ b/i18n/teams/en.json
@@ -41,63 +41,58 @@
       "UPLOADING_ATTACHMENT_WARNING": "Loading the attachment, don't change page"
     },
     "RESOURCE_CENTER": {
-      "SEARCH_FOR_FOLDERS": "Filter your Resource Center's folders",
+      "ACTIONS_ON_RESOURCE": "Actions on the resource",
+      "ACTIONS_ON_THE_RESOURCE": "Actions on the resource",
+      "COULDNT_LOAD_LIST": "Couldn't load the list",
       "CREATE_NEW_FOLDER": "Create a new folder",
-      "SELECT_FOLDER_NAME": "Select a name for the folder.",
-      "NAME_MUST_BE_UNIQUE_IN_RC": "The name has to be unique in the Resource Center.",
+      "DELETE": "Delete",
+      "ERROR_CREATING_RESOURCE_FILE": "{{name}}: error creating the resource.",
       "ERROR_OPENING_RESOURCE": "Error while opening the resource",
+      "FOLDER_WITH_SAME_NAME_ALREADY_EXISTS": "A folder with this name already exists",
+      "INVALID_FORMAT_FILE_": "{{name}}: format not allowed (only: jpg, jpeg, png, pdf).",
+      "INVALID_SIZE_FILE_": "{{name}}: file is too big (max 10 MB).",
+      "LASTLY_UPDATED_X_AGO": "Lastly updated {{time}}",
+      "NAME": "Name",
+      "NAME_MUST_BE_UNIQUE_IN_FOLDER": "The name has to be unique in the folder.",
+      "NAME_MUST_BE_UNIQUE_IN_RC": "The name has to be unique in the Resource Center.",
       "NO_FOLDER_SELECTED": "No folder selected",
       "NO_NAME": "No name",
       "NO_RESOURCES": "No resources",
+      "ONE_OR_MORE_FILE_UPLOAD_FAILED": "One or more file upload failed",
       "OPEN_OLD_VERSION": "Open old version",
-      "REMOVE_RESOURCE": "Remove the resource",
-      "RESOURCES_AVAILABLE": "Resources available",
-      "SELECT_FOLDER": "Select a folder",
-      "TAP_TO_ADD_A_RESOURCE": "Tap to add a resource...",
-      "VERSION_ATTACHED_IS_OLDER": "The resource has been updated since it was attached",
-      "COULDNT_LOAD_LIST": "Couldn't load the list",
-      "RENAME": "Rename",
-      "DELETE": "Delete",
-      "NAME": "Name",
-      "FOLDER_WITH_SAME_NAME_ALREADY_EXISTS": "A folder with this name already exists",
-      "YOU_WILL_USE_ALL_FILES_IN_FOLDER": "You will lose every file contained in the folder.",
-      "SEARCH_FOR_RESOURCES_OF_FOLDER_": "Filter resources contained in '{{folder}}'",
-      "UPLOAD_NEW_RESOURCES": "Upload new resources in this folder",
-      "ACTIONS_ON_THE_RESOURCE": "Actions on the resource",
       "OPEN_RESOURCE": "Open the current version of the resource",
-      "LASTLY_UPDATED_X_AGO": "Lastly updated {{time}}",
-      "UPLOAD_NEW_VERSION": "Upload new version",
-      "ACTIONS_ON_RESOURCE": "Actions on the resource",
+      "REMOVE_RESOURCE": "Remove the resource",
+      "RENAME": "Rename",
       "RENAME_FOLDER": "Rename folder",
       "RENAME_RESOURCE": "Rename resource",
-      "SELECT_RESOURCE_NAME": "Select a name for the resource.",
-      "NAME_MUST_BE_UNIQUE_IN_FOLDER": "The name has to be unique in the folder.",
+      "RESOURCES_AVAILABLE": "Resources available",
       "RESOURCE_WITH_SAME_NAME_ALREADY_EXISTS": "A resource with this name already exists",
-      "ONE_OR_MORE_FILE_UPLOAD_FAILED": "One or more file upload failed",
+      "SEARCH_FOR_FOLDERS": "Filter your Resource Center's folders",
+      "SEARCH_FOR_RESOURCES_OF_FOLDER_": "Filter resources contained in '{{folder}}'",
+      "SELECT_FOLDER": "Select a folder",
+      "SELECT_FOLDER_NAME": "Select a name for the folder.",
+      "SELECT_RESOURCE_NAME": "Select a name for the resource.",
+      "TAP_TO_ADD_A_RESOURCE": "Tap to add a resource...",
       "THE_FOLLOWING_FILES_FAILED_UPLOAD": "The following files failed to upload",
       "UPLOAD_COMPLETED": "Upload completed",
+      "UPLOAD_ERROR_FILE": "{{name}}: error uploading the file.",
       "UPLOAD_FAILED": "Upload failed",
-      "INVALID_FORMAT_FILE_": "{{name}}: format not allowed (only: jpg, jpeg, png, pdf).",
-      "INVALID_SIZE_FILE_": "{{name}}: file is too big (max 10 MB).",
-      "ERROR_CREATING_RESOURCE_FILE": "{{name}}: error creating the resource.",
-      "UPLOAD_ERROR_FILE": "{{name}}: error uploading the file."
+      "UPLOAD_NEW_RESOURCES": "Upload new resources in this folder",
+      "UPLOAD_NEW_VERSION": "Upload new version",
+      "VERSION_ATTACHED_IS_OLDER": "The resource has been updated since it was attached",
+      "YOU_WILL_USE_ALL_FILES_IN_FOLDER": "You will lose every file contained in the folder."
     },
     "TEAMS": {
+      "ACTIVE_ON": "Active on",
       "CURRENT": "Current",
       "CURRENT_TEAM_EXPLANATION": "Currently selected team",
+      "NO_TEAMS_AVAILABLE": "You have no teams available",
+      "PROJECTS_NAMES": { "arthur": "Arthur", "luigi": "Luigi", "orazio": "Horace", "scarlett": "Scarlett" },
       "SELECT_A_TEAM": "Select a team",
       "SELECT_TEAM_": "Select team {{team}}",
       "TEAM_NAME": "Team name",
       "TEAM_NOT_ACTIVATED_DISCLAIMER": "Team has not been activated for this product; contact an administrator.",
-      "ACTIVE_ON": "Active on",
-      "YOU_NEED_A_TEAM_TO_CONTINUE": "You need a team to continue",
-      "NO_TEAMS_AVAILABLE": "You have no teams available",
-      "PROJECTS_NAMES": {
-        "arthur": "Arthur",
-        "luigi": "Luigi",
-        "orazio": "Horace",
-        "scarlett": "Scarlett"
-      }
+      "YOU_NEED_A_TEAM_TO_CONTINUE": "You need a team to continue"
     }
   }
 }
