--- a/i18n/teams/it.json
+++ b/i18n/teams/it.json
@@ -41,63 +41,58 @@
       "UPLOADING_ATTACHMENT_WARNING": "Caricando l'allegato, non cambiare pagina"
     },
     "RESOURCE_CENTER": {
-      "SEARCH_FOR_FOLDERS": "Filtra le cartelle del tuo Resource Center",
+      "ACTIONS_ON_RESOURCE": "Azioni sulla risorsa",
+      "ACTIONS_ON_THE_RESOURCE": "Azioni sulla risorsa",
+      "COULDNT_LOAD_LIST": "Errore nel caricamento della lista",
       "CREATE_NEW_FOLDER": "Crea una nuova cartella",
-      "SELECT_FOLDER_NAME": "Scegli un nome per la cartella.",
-      "NAME_MUST_BE_UNIQUE_IN_RC": "Il nome deve essere unico nel Resource Center.",
+      "DELETE": "Elimina",
+      "ERROR_CREATING_RESOURCE_FILE": "{{name}}: errore nella creazione della risorsa.",
       "ERROR_OPENING_RESOURCE": "Errore durante l'apertura della risorsa",
+      "FOLDER_WITH_SAME_NAME_ALREADY_EXISTS": "È già presente una cartella con questo nome",
+      "INVALID_FORMAT_FILE_": "{{name}}: formato non permesso (solo: jpg, jpeg, png, pdf).",
+      "INVALID_SIZE_FILE_": "{{name}}: file troppo grande (max 10 MB).",
+      "LASTLY_UPDATED_X_AGO": "Aggiornato {{time}}",
+      "NAME": "Nome",
+      "NAME_MUST_BE_UNIQUE_IN_FOLDER": "Il nome deve essere univoco nella cartella.",
+      "NAME_MUST_BE_UNIQUE_IN_RC": "Il nome deve essere unico nel Resource Center.",
       "NO_FOLDER_SELECTED": "Nessuna cartella selezionata",
       "NO_NAME": "Senza nome",
       "NO_RESOURCES": "Nessuna risorsa",
+      "ONE_OR_MORE_FILE_UPLOAD_FAILED": "Uno o più caricamenti dei file è fallito",
       "OPEN_OLD_VERSION": "Apri vecchia versione",
-      "REMOVE_RESOURCE": "Rimuovi la risorsa",
-      "RESOURCES_AVAILABLE": "Risorse disponibili",
-      "SELECT_FOLDER": "Seleziona una cartella",
-      "TAP_TO_ADD_A_RESOURCE": "Tocca per aggiungere una risorsa...",
-      "VERSION_ATTACHED_IS_OLDER": "La risorsa è stata aggiornata da quando è stata allegata",
-      "COULDNT_LOAD_LIST": "Errore nel caricamento della lista",
-      "RENAME": "Rinomina",
-      "DELETE": "Elimina",
-      "NAME": "Nome",
-      "FOLDER_WITH_SAME_NAME_ALREADY_EXISTS": "È già presente una cartella con questo nome",
-      "YOU_WILL_USE_ALL_FILES_IN_FOLDER": "Perderai tutti i file contenuti nella cartella.",
-      "SEARCH_FOR_RESOURCES_OF_FOLDER_": "Filtra le risorse contenute in '{{folder}}'",
-      "UPLOAD_NEW_RESOURCES": "Carica nuove risorse in questa cartella",
-      "ACTIONS_ON_THE_RESOURCE": "Azioni sulla risorsa",
       "OPEN_RESOURCE": "Apri la versione corrente della risorsa",
-      "LASTLY_UPDATED_X_AGO": "Aggiornato {{time}}",
-      "UPLOAD_NEW_VERSION": "Carica nuova versione",
-      "ACTIONS_ON_RESOURCE": "Azioni sulla risorsa",
+      "REMOVE_RESOURCE": "Rimuovi la risorsa",
+      "RENAME": "Rinomina",
       "RENAME_FOLDER": "Rinomina cartella",
       "RENAME_RESOURCE": "Rinomina risorsa",
-      "SELECT_RESOURCE_NAME": "Scegli un nome per la risorsa.",
-      "NAME_MUST_BE_UNIQUE_IN_FOLDER": "Il nome deve essere univoco nella cartella.",
+      "RESOURCES_AVAILABLE": "Risorse disponibili",
       "RESOURCE_WITH_SAME_NAME_ALREADY_EXISTS": "È già presente una risorsa con questo nome",
-      "ONE_OR_MORE_FILE_UPLOAD_FAILED": "Uno o più caricamenti dei file è fallito",
+      "SEARCH_FOR_FOLDERS": "Filtra le cartelle del tuo Resource Center",
+      "SEARCH_FOR_RESOURCES_OF_FOLDER_": "Filtra le risorse contenute in '{{folder}}'",
+      "SELECT_FOLDER": "Seleziona una cartella",
+      "SELECT_FOLDER_NAME": "Scegli un nome per la cartella.",
+      "SELECT_RESOURCE_NAME": "Scegli un nome per la risorsa.",
+      "TAP_TO_ADD_A_RESOURCE": "Tocca per aggiungere una risorsa...",
       "THE_FOLLOWING_FILES_FAILED_UPLOAD": "I seguenti file hanno fallito il caricamento",
       "UPLOAD_COMPLETED": "Caricamento completato",
+      "UPLOAD_ERROR_FILE": "{{name}}: errore nel caricamento del file.",
       "UPLOAD_FAILED": "Caricamento fallito",
-      "INVALID_FORMAT_FILE_": "{{name}}: formato non permesso (solo: jpg, jpeg, png, pdf).",
-      "INVALID_SIZE_FILE_": "{{name}}: file troppo grande (max 10 MB).",
-      "ERROR_CREATING_RESOURCE_FILE": "{{name}}: errore nella creazione della risorsa.",
-      "UPLOAD_ERROR_FILE": "{{name}}: errore nel caricamento del file."
+      "UPLOAD_NEW_RESOURCES": "Carica nuove risorse in questa cartella",
+      "UPLOAD_NEW_VERSION": "Carica nuova versione",
+      "VERSION_ATTACHED_IS_OLDER": "La risorsa è stata aggiornata da quando è stata allegata",
+      "YOU_WILL_USE_ALL_FILES_IN_FOLDER": "Perderai tutti i file contenuti nella cartella."
     },
     "TEAMS": {
+      "ACTIVE_ON": "Attivo su",
       "CURRENT": "Attuale",
       "CURRENT_TEAM_EXPLANATION": "Team attualmente selezionato",
+      "NO_TEAMS_AVAILABLE": "Non hai team disponibili",
+      "PROJECTS_NAMES": { "arthur": "Arthur", "luigi": "Luigi", "orazio": "Horace", "scarlett": "Scarlett" },
       "SELECT_A_TEAM": "Seleziona un team",
       "SELECT_TEAM_": "Seleziona il team {{team}}",
       "TEAM_NAME": "Nome del team",
       "TEAM_NOT_ACTIVATED_DISCLAIMER": "Il team non è stato attivato per questo prodotto; contatta un amministratore",
-      "ACTIVE_ON": "Attivo su",
-      "YOU_NEED_A_TEAM_TO_CONTINUE": "Hai bisogno di un team per continuare",
-      "NO_TEAMS_AVAILABLE": "Non hai team disponibili",
-      "PROJECTS_NAMES": {
-        "arthur": "Arthur",
-        "luigi": "Luigi",
-        "orazio": "Horace",
-        "scarlett": "Scarlett"
-      }
+      "YOU_NEED_A_TEAM_TO_CONTINUE": "Hai bisogno di un team per continuare"
     }
   }
 }
