--- a/i18n/auth/it.json
+++ b/i18n/auth/it.json
@@ -71,6 +71,20 @@
     "TERMS_AND_CONDITIONS_HINT": "Leggi il nostro documento di Termini e Condizioni",
     "USER_NOT_FOUND": "Utente non trovato",
     "VALID_EMAIL_OBLIGATORY": "Un indirizzo email valido è obbligatorio",
-    "YOU_NEED_TO_CHOOSE_A_NEW_PASSWORD": "Scegli una password per il tuo account"
+    "YOU_NEED_TO_CHOOSE_A_NEW_PASSWORD": "Scegli una password per il tuo account",
+    "ENTER_OTP_CODE": "Inserisci il codice OTP",
+    "ENTER_OTP_CODE_I": "Inserisci il codice fornito dall'app di autenticazione",
+    "OTP_CODE": "Codice OTP",
+    "CONFIRM_OTP_CODE": "Conferma codice",
+    "CONFIRM_OTP_CODE_HINT": "Conferma il codice selezionato e procedi",
+    "INVALID_OTP_CODE": "Codice invalido",
+    "SETUP_MFA": "Configura MFA",
+    "SETUP_MFA_I": "Scansiona il codice QR con la tua app di autenticazione",
+    "SETUP_MFA_II": "Se abiliti l'autenticazione a più fattori (MFA), ogni volta che accedi ti verrà chiesto di digitare una password monouso (OTP) generata dinamicamente dall'app di autenticazione scelta.",
+    "MFA_IS_MANDATORY": "È obbligatorio abilitare l'autenticazione a più fattori in questa app. Premere il pulsante per procedere.",
+    "ENABLE_MFA": "Abilita MFA",
+    "DISABLE_MFA": "Disabilita MFA",
+    "DISABLE_MFA_I": "Disabilita MFA o cambia l'app di autenticazione",
+    "DISABLE_MFA_II": "Inserisci la password monouso (OTP) fornita dalla tua app di autenticazione per disabilitare l'autenticazione a più fattori (MFA) nel tuo account."
   }
 }
