feat(auth): better password policy UX

--- a/i18n/auth/en.json
+++ b/i18n/auth/en.json
@@ -13,13 +13,21 @@
     "CHANGE_MY_PASSWORD": "Change my password",
     "CHANGE_MY_PASSWORD_HINT": "Confirm your new password",
     "CHANGE_THE_PASSWORD": "Change the password",
-    "CHANGE_THE_PASSWORD_HINT": "Note: the password should consist of {{ n }} characters or more",
+    "PASSWORD_REQUIREMENTS_TITLE": "Password requirements",
+    "PASSWORD_REQUIREMENTS_FOLLOW": "Follow the password requirements.",
+    "PASSWORD_REQUIREMENTS": {
+      "MIN_LENGTH": "Contains at least {{n}} characters.",
+      "REQUIRE_DIGITS": "Contains at least 1 number.",
+      "REQUIRE_LOWERCASE": "Contains at least 1 lowercase letter.",
+      "REQUIRE_SYMBOLS": "Contains at least 1 special character.",
+      "REQUIRE_UPPERCASE": "Contains at least 1 uppercase letter."
+    },
     "CHOOSE_A_PASSWORD": "Choose a password",
     "CONFIRMATION_LINK_SENT": "Confirmation link sent",
     "CONFIRM_ACCOUNT": "Confirm account",
     "CONFIRM_NEW_PASSWORD": "Confirm the new password",
     "CONFIRM_NEW_PASSWORD_HINT": "Confirm the chosen password and continue",
-    "CONFIRM_PASSWORD_ERROR": "User not found, code not correct or password too short",
+    "CONFIRM_PASSWORD_ERROR": "Code not correct or password doesn't follow the policy above.",
     "CONFIRM_YOUR_EMAIL_TO_LOGIN": "Before to log in, you have to confirm the email address you provided; check in your inbox or into the SPAM folder.",
     "CREATE_AN_ACCOUNT": "Create a new account",
     "CREATE_AN_ACCOUNT_HINT": "Go to the registration page",
@@ -43,7 +51,6 @@
     "PASSWORD": "Password",
     "PASSWORD_CHANGED": "Password changed! Now you can sign in again",
     "PASSWORD_HINT": "The password you chose",
-    "PASSWORD_POLICY_VIOLATION": "The password must be at least {{ n }} characters long",
     "PASSWORD_RESET": "Password reset",
     "PASSWORD_RESET_CODE_SENT": "The code to reset the password has been sent via email",
     "PASSWORD_RESET_HINT": "Type in your email to request a password reset",
