--- a/i18n/auth/it.json
+++ b/i18n/auth/it.json
@@ -13,13 +13,23 @@
     "CHANGE_MY_PASSWORD": "Cambia la mia password",
     "CHANGE_MY_PASSWORD_HINT": "Conferma la tua nuova password",
     "CHANGE_THE_PASSWORD": "Cambia la password",
-    "CHANGE_THE_PASSWORD_HINT": "Nota: la password dovrebbe essere lunga almeno {{ n }} caratteri o più",
+    "PASSWORD_REQUIREMENTS_TITLE": "Requisiti password",
+    "PASSWORD_REQUIREMENTS_FOLLOW": "Segui i requisiti per la password.",
+    "PASSWORD_REQUIREMENTS": {
+      "MIN_LENGTH": "Contiene almeno {{n}} caratteri.",
+      "REQUIRE_DIGITS": "Contiene almeno 1 numero.",
+      "REQUIRE_LOWERCASE": "Contiene almeno 1 lettera minuscola.",
+      "REQUIRE_SYMBOLS": "Contiene almeno 1 carattere speciale.",
+      "REQUIRE_UPPERCASE": "Contiene almeno 1 lettera maiuscola."
+    },
+    "PASSWORD_POLICY_TITLE": "Regole password",
+    "PASSWORD_POLICY_DEFAULT": "La password deve contenere almeno 8 caratteri.",
     "CHOOSE_A_PASSWORD": "Scegli una password",
     "CONFIRMATION_LINK_SENT": "Codice di conferma inviato",
     "CONFIRM_ACCOUNT": "Conferma account",
     "CONFIRM_NEW_PASSWORD": "Conferma la nuova password",
     "CONFIRM_NEW_PASSWORD_HINT": "Conferma la nuova password e continua",
-    "CONFIRM_PASSWORD_ERROR": "Utente non trovato, codice non corretto o password troppo corta",
+    "CONFIRM_PASSWORD_ERROR": "Il codice non è corretto o la password non segue le regole indicate sopra.",
     "CONFIRM_YOUR_EMAIL_TO_LOGIN": "Per effettuare l'accesso devi prima confermare l'indirizzo email da te indicato; controlla nella tua posta in arrivo o nello SPAM.",
     "CREATE_AN_ACCOUNT": "Crea un nuovo account",
     "CREATE_AN_ACCOUNT_HINT": "Vai alla pagina di registrazione",
@@ -43,7 +53,6 @@
     "PASSWORD": "Password",
     "PASSWORD_CHANGED": "Password cambiata! Puoi effettuare l'accesso ora",
     "PASSWORD_HINT": "La password che hai scelto",
-    "PASSWORD_POLICY_VIOLATION": "La password deve essere almeno di {{ n }} caratteri",
     "PASSWORD_RESET": "Reset della password",
     "PASSWORD_RESET_CODE_SENT": "Il codice di reset della password è stato inviato via email",
     "PASSWORD_RESET_HINT": "Inserisci la tua email per richiedere il reset della password",
